# gsplines_cpp_ros

./: .gitignore  .gitmodules  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml
docker/: build_image.bash  build_image.bat  container-start.bash  container-start.bat  image.dockerfile  melodic_ros.dockerfile  melodic_ros.dockerimage  noetic_ros.dockerfile  noetic_ros.dockerimage  vim_installation.bash
docker/configfiles/: vimrc
gsplines/: CMakeLists.txt  package.xml  setup.py
gsplines/include/gsplines_ros/: gsplines_ros.hpp
gsplines/launch/: test_gspline_msgs.test
gsplines/python/src/gsplines_ros/: __init__.py  gsplines_ros.py
gsplines/scripts/: gspline_plotter  random_minimum_jerk_path_generator
gsplines/src/: gsplines_ros.cpp
gsplines_examples/: CMakeLists.txt  package.xml
gsplines_examples/launch/: launch_motion_example.launch  trajectory_wrapper.launch
gsplines_examples/scripts/: small_random_move.py
gsplines_examples/src/: test_node.cpp
gsplines_follow_trajectory/: CMakeLists.txt  package.xml
gsplines_follow_trajectory/action/: FollowJointGSpline.action
gsplines_follow_trajectory/cfg/: FollowJointTrajectoryActionWrapperDynamicReconfigure.cfg
gsplines_follow_trajectory/include/gsplines_follow_trajectory/: follow_joint_trajectory_action_wrapper.hpp
gsplines_follow_trajectory/scripts/: action_transtion_overlay_text_publisher  joint_states_to_float  random_minimum_jerk_gsplines  random_minimum_jerk_motions  random_minimum_jerk_trajectories
gsplines_follow_trajectory/src/: follow_joint_trajectory_action_wrapper.cpp  follow_joint_trajectory_action_wrapper_node.cpp
gsplines_follow_trajectory_control/: CMakeLists.txt
gsplines_msgs/: CMakeLists.txt  package.xml
gsplines_msgs/msg/: Basis.msg  GSpline.msg  JointGSpline.msg
gsplines_msgs/srv/: GSplineTrigger.srv  GetBasis.srv  JointGSplineTrigger.srv
gsplines_ros/: CMakeLists.txt  package.xml
gsplines_ros/bindings/: bindings.cpp
gsplines_ros/include/gsplines_ros/: gsplines_ros.hpp
gsplines_ros/python/src/gsplines_ros/: gsplines_ros.py
gsplines_ros/scripts/: gspline_dk_path_publisher  gspline_plotter  gspline_to_joint_trajectory  point_publisher
gsplines_ros/src/: gsplines_ros.cpp
gsplines_ros/test/: CMakeLists.txt  message_conversion.cpp  message_conversion.py  node_messages.cpp  node_messages.test
gsplines_test/: CMakeLists.txt  package.xml
gsplines_test/launch/: gsplines_follow_trajectory_example.launch  launch_motion_example.launch
gsplines_test/src/: test_node.cpp
rqt_joint_gspline_plot/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_joint_gspline_plot/src/rqt_joint_gspline_plot/: main_widget.py  plugin.py
