<?xml version="1.0"?>
<package format="2">
  <name>gsplines_ros</name>
  <version>0.0.0</version>
  <description>The gsplines package</description>
  <maintainer email="rafaelrojasmiliani@gmail.com">Rafael Rojas Miliani</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>gsplines_msgs</depend>
</package>
