<?xml version="1.0"?>
<package format="2">
  <name>gsplines_follow_trajectory</name>
  <version>0.0.0</version>
  <description>The gsplines_follow_trajectory_control package</description>
  <maintainer email="rafaelrojasmiliani@gmail.com">Rafael A. Rojas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gsplines_ros</build_depend>
  <build_depend>gsplines_msgs</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gsplines_ros</build_export_depend>
  <build_export_depend>gsplines_msgs</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gsplines_ros</exec_depend>
  <exec_depend>gsplines_msgs</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
</package>
