<?xml version="1.0"?>
<package format="2">
  <name>gsplines_test</name>
  <version>0.0.0</version>
  <description>The gsplines_test package</description>
  <maintainer email="fraunhoferlab@todo.todo">fraunhoferlab</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gsplines_ros</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gsplines_ros</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gsplines_ros</exec_depend>
  <export>
  </export>
</package>
