<?xml version="1.0"?>
<package format="2">
    <name>rqt_joint_gspline_plot</name>
    <version>0.0.0</version>
    <description>The rqt_joint_gspline_plot package</description>
    <maintainer email="rafaelrojasmiliani@gmail.com">rafael</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gsplines_msgs</build_depend>
    <build_depend>gsplines_ros</build_depend>
    <build_depend>joint_trajectory_controller</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_cpp</build_depend>
    <build_depend>rqt_gui_py</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_export_depend>gsplines_msgs</build_export_depend>
    <build_export_depend>gsplines_ros</build_export_depend>
    <build_export_depend>joint_trajectory_controller</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rqt_gui</build_export_depend>
    <build_export_depend>rqt_gui_cpp</build_export_depend>
    <build_export_depend>rqt_gui_py</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>trajectory_msgs</build_export_depend>
    <exec_depend>gsplines_msgs</exec_depend>
    <exec_depend>gsplines_ros</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_cpp</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <export>
        <rqt_gui plugin="${prefix}/plugin.xml" />
    </export>
</package>
